--- a/resources/views/admin/add.edge
+++ b/resources/views/admin/add.edge
@@ -42,7 +42,7 @@ Add User Page
                 <input name="password" type="text" class="form-control col-lg-9" placeholder="enter strong password"/>
                 <small id="emailHelp" class="form-text text-muted"></small>
             </div>
-            <a type="submit" class="btn btn-info float-left" href="{{ route('/') }}">Back</a>
+            <a type="submit" class="btn btn-info float-left" href="{{ route('goto-home') }}">Back</a>
             <button type="submit" class="btn btn-info float-right">Submit</button>
         </form>
     </div>
