--- a/resources/views/partials/navbar.edge
+++ b/resources/views/partials/navbar.edge
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link text-white" href="{{route('/')}}"> Home</a>
+          <a class="nav-link text-white" href="{{route('goto-home')}}"> Home</a>
         </li>
         @loggedIn          
           <li class="nav-item">
