--- a/resources/views/admin.edge
+++ b/resources/views/admin.edge
@@ -1,14 +1,14 @@
 @layout('welcome')
 
 @section('title')
-Index Page
+Admin Page
 @endsection
 
 @section('content')
 <div class="jumbotron">
     
     @loggedIn
-    <h1 class="display-4"> Hello "{{ auth.user.username }}"</h1> 
+    <h1 class="display-4"> Hello Admin "{{ auth.user.username }}"</h1> 
     @else
     <h1 class="display-4"> Welcome You! </h1>  
     @endloggedIn
@@ -22,7 +22,8 @@ Index Page
     @loggedIn        
     <p class="lead">Select your operation</p>
     <div class='row'>
-        
+        <a class="col mt-4 ml-4 btn btn-info btn-lg text-white" href="{{ route('user-add-page') }}">Add User</a>
+        <a class="col mt-4 ml-4 btn btn-info btn-lg text-white" href="{{ route('user-manage-page') }}" role="button">Manage Users</a>   
     </div>
     @else 
     <p class="lead">Please login or ask your admin to create account</p>
