--- a/resources/views/admin/edit.edge
+++ b/resources/views/admin/edit.edge
@@ -15,7 +15,7 @@ User Edit Page
     
     <p class="lead">Edit detail and submit form</p>
     <div class="container border bg-light">
-        <form action="{{ route('edit', {id: user.id}) }}" method="POST" class='p-3'> 
+        <form action="{{ route('user-edit', {id: user.id}) }}" method="POST" class='p-3'> 
             {{ csrfField() }}                                       
             <div class='row form-group'>
                 <label class='col-lg-3 col-form-label form-control-label'>Id</label>
