--- a/resources/views/manager/leave.edge
+++ b/resources/views/manager/leave.edge
@@ -14,8 +14,8 @@ Manager Leave Page
     <hr class="my-4">
     
     <p class="lead">Manager approve leave here</p>
-    <table class="table table-hover">
-        <thead>
+    <table class="table table-hover table-sm">
+        <thead class="thead-dark">
           <tr>
             <th scope="col">#</th>
             <th scope="col">Emp Name</th>
@@ -29,34 +29,28 @@ Manager Leave Page
         </thead>
         <tbody>
           @each(leave in leaves)
-          <tr>
-            <th scope="row">{{ ($loop.index + 1) }}</th>
-            <td>{{leave.username}}</td>
-            <td>{{leave.subject}}</td>
-            <td colspan="2">{{leave.description}}</td>
-            <td>{{leave.start_date}}</td>
-            <td>{{leave.end_date}}</td>
-            <td>{{leave.manager}}</td>
-            <td>{{leave.status}}</td>
-            <td>
-                <form action="{{ route('leave-update') }}" method="POST" class='p-3'> 
-                    {{ csrfField() }}                                       
-                    <div class='row form-group'>
-                        <select name="role" class="custom-select" id="exampleFormControlSelect1" required>   
-                            <option value="">Update status</option>                 
-                            <option value='under_review'>under_review</option>
-                            <option value='grant'>grant</option>
-                            <option value='cancelled'>cancelled</option>
-                          </select>
-                    </div>
-                    <button type="submit" class="btn btn-info float-right">Update</button>
-                </form>
-            </td>
-          </tr>
+            @if(leave.status==='grant')
+                <tr class="bg-success">
+                    @include('partials.manager_leave_status_loop')
+                </tr>
+            @elseif(leave.status==='apply')
+                <tr class="bg-info">
+                    @include('partials.manager_leave_status_loop')
+                </tr>          
+            @elseif(leave.status==='review')
+                <tr class="bg-warning">
+                    @include('partials.manager_leave_status_loop')
+                </tr>          
+            @else
+                {{--  cancel  --}}
+                <tr class="bg-danger">
+                    @include('partials.manager_leave_status_loop')
+                </tr>
+            @endif
           @endeach
         </tbody>
     </table>
-    <a class="btn btn-info float-right" href="{{route('/')}}">Back</a>
+    <a class="btn btn-info float-right" href="{{route('goto-home')}}">Back</a>
     </div>
 </div> 
 @endsection
